--- a/css/materialize.css
+++ b/css/materialize.css
@@ -37,11 +37,11 @@
 }
 
 .materialize-red.lighten-2 {
-  background-color: #ee6e73 !important;
+  background-color: #b60000 !important;
 }
 
 .materialize-red-text.text-lighten-2 {
-  color: #ee6e73 !important;
+  color: #b60000 !important;
 }
 
 .materialize-red.lighten-1 {
@@ -2742,7 +2742,7 @@ nav,
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73;
+  border-left: 5px solid #b60000;
 }
 
 i {
@@ -2802,7 +2802,7 @@ video.responsive-video {
 }
 
 .pagination li.active {
-  background-color: #ee6e73;
+  background-color: #b60000;
 }
 
 .pagination li.disabled a {
@@ -2999,7 +2999,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #b60000;
 }
 
 .page-footer .footer-copyright {
@@ -4493,7 +4493,7 @@ nav ul a span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #b60000;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -5397,7 +5397,7 @@ small {
 .tabs .tab a:hover,
 .tabs .tab a.active {
   background-color: transparent;
-  color: #ee6e73;
+  color: #b60000;
 }
 
 .tabs .tab.disabled a,
@@ -5410,7 +5410,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: #b60000;
   will-change: left, right;
 }
 
@@ -7755,13 +7755,13 @@ input[type=range]:focus::-ms-fill-upper {
 .table-of-contents a:hover {
   color: #a8a8a8;
   padding-left: 19px;
-  border-left: 1px solid #ee6e73;
+  border-left: 1px solid #b60000;
 }
 
 .table-of-contents a.active {
   font-weight: 500;
   padding-left: 18px;
-  border-left: 2px solid #ee6e73;
+  border-left: 2px solid #b60000;
 }
 
 .side-nav {
@@ -7987,7 +7987,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .side-nav .collapsible-body>ul:not(.collapsible)>li.active,
 .side-nav.fixed .collapsible-body>ul:not(.collapsible)>li.active {
-  background-color: #ee6e73;
+  background-color: #b60000;
 }
 
 .side-nav .collapsible-body>ul:not(.collapsible)>li.active a,
@@ -8828,7 +8828,7 @@ input[type=range]:focus::-ms-fill-upper {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #b60000;
   -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
